navbar and hero

--- a/index.html
+++ b/index.html
@@ -11,16 +11,44 @@
       <header class="header">
         <img src="/assets/img/DermaWorld.png" alt="Derma World Logo" class="header__logo">
         <input type="text" placeholder="SEARCH" class="header__search">
-        <nav class="header__nav">
-          <ul>
-            <li><a href="#">Bedingungen</a></li>
-            <li><a href="#">Behandlungen</a></li>
-            <li><a href="#">Veranstaltungen</a></li>
-            <li><a href="#">Werkzeuge</a></li>
-            <li><a href="#">Forschung und Erkenntnisse</a></li>
-          </ul> 
-        </nav>
       </header>
+      <nav class="navigation">
+        <ul class="navigation__main">
+          <li><a href="#">Bedingungen</a></li>
+          <li><a href="#" class="navigation__main--active">Behandlungen</a>
+            <ul class="navigation__sub1">
+              <li><a href="#" class="navigation__sub1--active">Adtralza</a>
+                <ul class="navigation__sub2">
+                  <li><a href="#" class="navigation__sub2--active">Overview</a></li>
+                  <li><a href="#">Mode of Action</a></li>
+                  <li><a href="#">Efficacy</a></li>
+                  <li><a href="#">Quality of Life</a></li>
+                  <li><a href="#">Safety</a></li>
+                  <li><a href="#">Dosing</a></li>
+                  <li><a href="#">News</a></li>
+                  <li><a href="#">Technical Information</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Diavonex</a></li>
+              <li><a href="#">Diavobet</a></li>
+              <li><a href="#">Enstilar</a></li>
+              <li><a href="#">Fucidin</a></li>
+              <li><a href="#">Kyntheum</a></li>
+              <li><a href="#">Protopic</a></li>
+              <li><a href="#">Skinoren</a></li>
+              <li><a href="#">Tralokinumab</a></li>
+              <li><a href="#">Xamiol</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Veranstaltungen</a></li>
+          <li><a href="#">Werkzeuge</a></li>
+          <li><a href="#">Forschung und Erkenntnisse</a></li>
+        </ul> 
+      </nav>
+      <article class="hero">
+        <img src="/assets/img/Adtralza.png" alt="Adtralza Logo">
+        <h1>Adtralza® is a new treatment for adult patients with moderate-to-severe atopic dermatitis (eczema) who are candidates for systemic therapy.</h1>
+      </article>
       <section class="references">
         <a href="#"><img src="/assets/img/ref-arrow.svg" alt="Arrow">References</a>
       </section>
