More content sections added

--- a/index.html
+++ b/index.html
@@ -49,6 +49,32 @@
         <img src="/assets/img/Adtralza.png" alt="Adtralza Logo">
         <h1>Adtralza® is a new treatment for adult patients with moderate-to-severe atopic dermatitis (eczema) who are candidates for systemic therapy.</h1>
       </article>
+      <section class="information">
+        <img src="/assets/img/adtralza-packshot.png" alt="Adtralza Packagde">
+        <div class="information__text">
+          <h2>It is the first and only biologic developed to specifically neutralize IL-13, a key driver of atopic dermatitis signs and symptoms(1,2)</h2>
+          <p>Learn more about how Adtralza® works and how to use it in treatment.</p>
+        </div>
+      </section>
+      <section class="profile">
+        <div class="profile__content">
+          <img src="/assets/img/profile01.png" alt="Long term sustained improvements">
+          <h4>Long term sustained improvements</h4>
+          <p>9 out of 10 respondents experienced sustained disease control in clinical trials 10, providing sustained improvements in the burden of disease(1,2, 1, 8*†‡).</p>
+          <a href="#">See efficacy and trial data</a>
+        </div>
+        <div class="profile__content">
+          <img src="/assets/img/profile02.png" alt="Improvements in the burden of disease">
+          <h4>Improvements in the burden of disease</h4>
+          <p>Patients in clinical trials saw an improvement in Quality of Life with early symptom relief and sustained improvements in burden of disease from week 16 to 32(12,13).</p>
+          <a href="#">Learn more about quality of life improvements</a>
+        </div>
+        <div class="profile__content">
+          <img src="/assets/img/profile03.png" alt="Good safty profile">
+          <h4>Good safty profile</h4>
+          <p>The overall frequency and severity of adverse events with Adtralza® were comparable to placebo at 16 weeks* and 52 weeks(19).</p>
+        </div>
+      </section>
       <section class="references">
         <a href="#"><img src="/assets/img/ref-arrow.svg" alt="Arrow">References</a>
       </section>
