Markup and SEO head tagging done

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Derma World</title>
+    <title>Derma­ World - by LEO Pharma</title>
+    <meta name="author" content="dermaworld" />
+    <meta property="description" content="Derma World - dermatology treatments" />
+    <meta property="og:title" content="Derma­ World - by LEO Pharma" />
+    <meta property="og:url" content="https://www.leo-pharma.com/" />
+    <meta property="og:description" content="Derma World - dermatology treatments" />
+    <meta property="og:type" content="website" />
+    <meta name="robots" content="noindex, nofollow" />
   </head>
   <body>
     <main class="main">
@@ -53,7 +60,7 @@
         <img src="/assets/img/adtralza-packshot.png" alt="Adtralza Packagde">
         <div class="information__text">
           <h2>It is the first and only biologic developed to specifically neutralize IL-13, a key driver of atopic dermatitis signs and symptoms(1,2)</h2>
-          <p>Learn more about how Adtralza® works and how to use it in treatment.</p>
+          <p class="font18">Learn more about how Adtralza® works and how to use it in treatment.</p>
         </div>
       </section>
       <section class="profile">
@@ -61,18 +68,92 @@
           <img src="/assets/img/profile01.png" alt="Long term sustained improvements">
           <h4>Long term sustained improvements</h4>
           <p>9 out of 10 respondents experienced sustained disease control in clinical trials 10, providing sustained improvements in the burden of disease(1,2, 1, 8*†‡).</p>
-          <a href="#">See efficacy and trial data</a>
+          <a href="#" class="purplelink">See efficacy and trial data</a>
         </div>
         <div class="profile__content">
           <img src="/assets/img/profile02.png" alt="Improvements in the burden of disease">
           <h4>Improvements in the burden of disease</h4>
           <p>Patients in clinical trials saw an improvement in Quality of Life with early symptom relief and sustained improvements in burden of disease from week 16 to 32(12,13).</p>
-          <a href="#">Learn more about quality of life improvements</a>
+          <a href="#" class="purplelink">Learn more about quality of life improvements</a>
         </div>
         <div class="profile__content">
           <img src="/assets/img/profile03.png" alt="Good safty profile">
           <h4>Good safty profile</h4>
           <p>The overall frequency and severity of adverse events with Adtralza® were comparable to placebo at 16 weeks* and 52 weeks(19).</p>
+        </div>
+      </section>
+      <section class="information">
+        <div class="information__text">
+          <h2>Adtralza® neutralizes IL-13, a key driver of Atopic Dermatitis signs and symptoms.</h2>
+          <p>
+            By specifically targeting the IL-13 cytokine, Adtralza® inhibits the interaction with type II receptors and prevents IL-13-induced inflammatory responses in the skin(1,2).
+            <br/><br/>
+            Adtralza® selectively modulates the dysregulated immune system by(1):
+            <br/><br/>
+            — Reducing markers of skin inflammation 
+            <br/>
+            — Improving markers of skin barrier integrity 
+            <br/>
+            — Reducing epidermal thickness
+          </p>
+          <a href="#" class="btn">Watch the video</a>
+          <p class="font14">Duration: 2:43</p>
+        </div>
+        <img src="/assets/img/il-13.jpg" alt="IL-13 cytokine" class="information__image">
+      </section>
+      <section class="tools">
+        <h2>Clinical tools - at a glance</h2>
+        <div class="tools__content">
+          <figure>
+            <img src="/assets/img/dosing.jpg" alt="Dosing guide">
+            <figcaption>
+              <h2>Dosing Guide</h2>
+              <p>Adtralza® has a straightforward dosing regimen, with 150 mg prefilled syringes(1).</p>
+              <a href="#" class="purplelink">Learn more about application and dosing</a>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="/assets/img/injection.jpg" alt="Patient injection made simple">
+            <figcaption>
+              <h2>Patient injection made simple</h2>
+              <p>This step by step video guide shows the patient how to self inject using the two syringes that come in the Adtralza® carton.</p>
+              <a href="#" class="purplelink">Watch the video</a>
+            </figcaption>
+          </figure>
+        </div>
+      </section>
+      <section class="videos">
+        <h2>KOL Videos - get expert insights here</h2>
+        <p>See what Key opinion leaders have to say about their experiences with Adtralza®</p>
+        <div class="videos__content">
+          <figure>
+            <img src="/assets/img/playbtn.svg" alt="video">
+            <figcaption>
+              <h5>Video title</h5>
+              <p>Short description of the contents or subject of the video.  You can upload a screen from the video as thumbnail image</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="/assets/img/playbtn.svg" alt="video">
+            <figcaption>
+              <h5>Video title</h5>
+              <p>Short description of the contents or subject of the video.  You can upload a screen from the video as thumbnail image</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="/assets/img/playbtn.svg" alt="video">
+            <figcaption>
+              <h5>Video title</h5>
+              <p>Short description of the contents or subject of the video.  You can upload a screen from the video as thumbnail image</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="/assets/img/playbtn.svg" alt="video">
+            <figcaption>
+              <h5>Video title</h5>
+              <p>Short description of the contents or subject of the video.  You can upload a screen from the video as thumbnail image</p>
+            </figcaption>
+          </figure>
         </div>
       </section>
       <section class="references">
