--- a/index.html
+++ b/index.html
@@ -21,35 +21,39 @@
       </header>
       <nav class="navigation">
         <ul class="navigation__main">
-          <li><a href="#">Bedingungen</a></li>
-          <li><a href="#" class="navigation__main--active">Behandlungen</a>
-            <ul class="navigation__sub1">
-              <li><a href="#" class="navigation__sub1--active">Adtralza</a>
-                <ul class="navigation__sub2">
-                  <li><a href="#" class="navigation__sub2--active">Overview</a></li>
-                  <li><a href="#">Mode of Action</a></li>
-                  <li><a href="#">Efficacy</a></li>
-                  <li><a href="#">Quality of Life</a></li>
-                  <li><a href="#">Safety</a></li>
-                  <li><a href="#">Dosing</a></li>
-                  <li><a href="#">News</a></li>
-                  <li><a href="#">Technical Information</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Diavonex</a></li>
-              <li><a href="#">Diavobet</a></li>
-              <li><a href="#">Enstilar</a></li>
-              <li><a href="#">Fucidin</a></li>
-              <li><a href="#">Kyntheum</a></li>
-              <li><a href="#">Protopic</a></li>
-              <li><a href="#">Skinoren</a></li>
-              <li><a href="#">Tralokinumab</a></li>
-              <li><a href="#">Xamiol</a></li>
-            </ul>
+          <li><a href="#" class="main__link">Bedingungen</a></li>
+          <li><a href="#" class="main__link">Behandlungen</a>
+            <div class="navigation__sub1">
+              <ul >
+                <li><a href="#" class="sub1__link">Adtralza</a>
+                  <div class="navigation__sub2">
+                    <ul>
+                      <li><a href="#" class="sub2__link">Overview</a></li>
+                      <li><a href="#" class="sub2__link">Mode of Action</a></li>
+                      <li><a href="#" class="sub2__link">Efficacy</a></li>
+                      <li><a href="#" class="sub2__link">Quality of Life</a></li>
+                      <li><a href="#" class="sub2__link">Safety</a></li>
+                      <li><a href="#" class="sub2__link">Dosing</a></li>
+                      <li><a href="#" class="sub2__link">News</a></li>
+                      <li><a href="#" class="sub2__link">Technical Information</a></li>
+                    </ul>
+                  </div>
+                </li>
+                <li><a href="#" class="sub1__link">Diavonex</a></li>
+                <li><a href="#" class="sub1__link">Diavobet</a></li>
+                <li><a href="#" class="sub1__link">Enstilar</a></li>
+                <li><a href="#" class="sub1__link">Fucidin</a></li>
+                <li><a href="#" class="sub1__link">Kyntheum</a></li>
+                <li><a href="#" class="sub1__link">Protopic</a></li>
+                <li><a href="#" class="sub1__link">Skinoren</a></li>
+                <li><a href="#" class="sub1__link">Tralokinumab</a></li>
+                <li><a href="#" class="sub1__link">Xamiol</a></li>
+              </ul>
+            </div>
           </li>
-          <li><a href="#">Veranstaltungen</a></li>
-          <li><a href="#">Werkzeuge</a></li>
-          <li><a href="#">Forschung und Erkenntnisse</a></li>
+          <li><a href="#" class="main__link">Veranstaltungen</a></li>
+          <li><a href="#" class="main__link">Werkzeuge</a></li>
+          <li><a href="#" class="main__link">Forschung und Erkenntnisse</a></li>
         </ul> 
       </nav>
       <article class="hero">
@@ -172,6 +176,6 @@
         </div>
       </footer>
     </main>   
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/main.js" defer></script>
   </body>
 </html>
